new proj/src/objects/GE_OG_Finance_Details__c.object
<CustomObject>
    <description>This object is used to capture the finance details of the record.</description>
    <fields>
        <fullName>Finance_CoE_Cycle_Time__c</fullName>
        <formula>(Finance_Inbound_Response__c  -  Finance_Outbound_Response__c) * 24</formula>
        <label>Finance CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Inbound_Response__c</fullName>
        <label>Finance Inbound Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finance_Outbound_Response__c</fullName>
        <label>Finance Outbound Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Finance_Risk_Score__c</fullName>
        <label>Customer Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>Less than -1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1.5 to 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 1.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance Details</relationshipLabel>
        <relationshipName>Finance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Actual__c</fullName>
        <label>Recommended O&amp;G credit limit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Ad_Payment__c</fullName>
        <label>Advanced Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Additional_T_C_s__c</fullName>
        <formula>TEXT(GE_OG_Account__r.GE_OG_Buss_Tier1__c)&amp;&quot;,&quot;&amp;TEXT(GE_HQ_Finance_Risk_Score__c)&amp;&quot;,&quot;&amp;TEXT(GE_OG_Finance_Credit_Limit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional T&amp;C&apos;s</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Avg_CMFFinance_Approv_Cycle_Tim__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_KYC_Outbound_Resp__c)),NOT(ISNULL(Finance_Inbound_Response__c))),((Finance_Inbound_Response__c - GE_OG_KYC_Outbound_Resp__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average CMF + Finance Approval Cycle Tim</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Avg_Fin_CoE_Cycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_CMF_INBOUND_RESP__c)),NOT(ISNULL(Finance_Inbound_Response__c))),((Finance_Inbound_Response__c - GE_OG_CMF_INBOUND_RESP__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Finance CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Business_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Tier</label>
        <referenceTo>GE_HQ_P_L__c</referenceTo>
        <relationshipLabel>Finance Details</relationshipLabel>
        <relationshipName>GE_OG_Finance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_BussToFin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessTierToFinance</label>
        <referenceTo>GE_OG_BussTierToFince__c</referenceTo>
        <relationshipLabel>Finance Details</relationshipLabel>
        <relationshipName>Finance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_CMF_INBOUND_RESP__c</fullName>
        <formula>GE_OG_Account__r.CMF_Inbound_Response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMF INBOUND RESPONSE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Com_Finance_Contact_Email__c</fullName>
        <label>Commercial Finance Contact Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Com_Finance_Contact_First_Name__c</fullName>
        <label>Commercial Finance Contact First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Com_Finance_Contact_Last_Name__c</fullName>
        <label>Commercial Finance Contact Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Com_Finance_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Finance Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Comment__c</fullName>
        <description>This is created to use for Accounts - Finance on KYC</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Credit_Line_Request__c</fullName>
        <label>Credit Line Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Cust_accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has the customer accepted Advanced Payme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_FIN_DUNS_Number__c</fullName>
        <formula>GE_OG_Account__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Address__c</fullName>
        <formula>GE_OG_Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_City__c</fullName>
        <formula>GE_OG_Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_CoE_Age__c</fullName>
        <label>Finance CoE Age (in hrs)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_CoE_New_Value__c</fullName>
        <label>Finance CoE New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_CoE_Old_Value__c</fullName>
        <label>Finance CoE Old Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Country__c</fullName>
        <formula>GE_OG_Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Re_Review_New_Value__c</fullName>
        <label>Finance Re-Review New Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Re_Review_Old_Value__c</fullName>
        <label>Finance Re-Review Old Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Rereview__c</fullName>
        <formula>(GE_OG_KYC__r.GE_OG_Finance_checked__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Re review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_State__c</fullName>
        <formula>GE_OG_Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_Zip__c</fullName>
        <formula>GE_OG_Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finan_TC__c</fullName>
        <label>Recommended Finance T&amp;C&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Completed_Rejected_Age__c</fullName>
        <formula>( GE_OG_Finance_Completed_Timestamp__c - GE_OG_Finance_In_Process_Timestamp__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Completed/RejectedAge (in hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Completed_Timestamp__c</fullName>
        <label>Finance Completed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Country_Risk__c</fullName>
        <label>Finance Country Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Credit_Limit__c</fullName>
        <label>Finance Credit Limit</label>
        <picklist>
            <picklistValues>
                <fullName>$0 - $10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10001 - $500000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500001 - $1000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1000001 - $5000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5000001 - $1000000000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_In_Process_Timestamp__c</fullName>
        <label>Finance In Progress Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Sent_Back_Counter__c</fullName>
        <label>Finance Sent Back Counter</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Sent_Back_Interim__c</fullName>
        <label>Finance Sent Back Interim</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Sent_Back_Time__c</fullName>
        <label>Finance Sent Back Time Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Status__c</fullName>
        <label>Finance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending User Review - On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC_Outbound_Resp__c</fullName>
        <formula>GE_OG_KYC__r.KYC_Outbound_Response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KYC Outbound Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_KYC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KYC</label>
        <referenceTo>GE_PRM_KYC_Termination_Checklist__c</referenceTo>
        <relationshipLabel>Finance Details</relationshipLabel>
        <relationshipName>GE_OG_Finance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Max_CMF_Fin_Approv_CycleTime__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_KYC_Outbound_Resp__c)),NOT(ISNULL(Finance_Inbound_Response__c))),((Finance_Inbound_Response__c - GE_OG_KYC_Outbound_Resp__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max CMF + Finance Approval Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Max_Fin_CoE_Cycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_CMF_INBOUND_RESP__c)),NOT(ISNULL(Finance_Inbound_Response__c))),((Finance_Inbound_Response__c - GE_OG_CMF_INBOUND_RESP__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Finance CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Min_CMF_Fin_Approv_Cycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_KYC_Outbound_Resp__c)),NOT(ISNULL(Finance_Inbound_Response__c))),((Finance_Inbound_Response__c - GE_OG_KYC_Outbound_Resp__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min CMF + Finance Approval Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Min_Fin_CoE_Cycle_Time__c</fullName>
        <formula>IF(AND(NOT(ISNULL(GE_OG_CMF_INBOUND_RESP__c)),NOT(ISNULL(Finance_Inbound_Response__c))),((Finance_Inbound_Response__c - GE_OG_CMF_INBOUND_RESP__c ) )* 24,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Finance CoE Cycle Time</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Resubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier1__c</fullName>
        <formula>TEXT(GE_OG_Account__r.GE_OG_Buss_Tier1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier2__c</fullName>
        <formula>TEXT(GE_OG_Account__r.GE_OG_Buss_Tier2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 2  P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier3__c</fullName>
        <formula>TEXT(GE_OG_Account__r.GE_OG_Buss_Tier3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 3 P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ge_OG_Account_Status__c</fullName>
        <formula>TEXT(GE_OG_Account__r.GE_HQ_Request_Status__c)</formula>
        <label>CMF Status</label>
        <type>Text</type>
    </fields>
    <label>Finance Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FIN-{000000}</displayFormat>
        <label>Finance #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Details</pluralLabel>
    <recordTypes>
        <fullName>GE_OG_FinanceEdit</fullName>
        <active>true</active>
        <label>FinanceEdit</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_FinanceLocked</fullName>
        <active>true</active>
        <label>FinanceLocked</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>